--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
 
         <section>
-            <h1 id="fontHallowen">HALLOWEN</h1>
-            <label id="fontHere">it's here</label>
-            <p>Venha participar do maior evento de Dia das Bruxas do mundo!</p>
-
+            <div id="divTitles">
+                <h1 id="fontHallowen">HALLOWEN</h1>
+                <label id="fontHere">it's here</label>
+                <p>Venha participar do maior evento de Dia das Bruxas do mundo!</p>
+            </div>
+            
             <div id="divBtn">
                 <button id="btn1">cadastre seu email aqui</button>
                 <button id="btn2">Eu quero!</button>
